# gpt

./: README.md  dockerfile  pyproject.toml
app/: main.py  test.py
app/api/: routes.py
app/data/: state_of_the_union.txt
