[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["Saswata <main@saswata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
langchain = "^0.0.135"
openai = "^0.27.4"
python-dotenv = "^1.0.0"
tiktoken = "^0.3.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
